very basic css fix for overflowing text

--- a/client/src/pages/Energisers.css
+++ b/client/src/pages/Energisers.css
@@ -24,7 +24,7 @@
 
 .energiser-box {
     width: auto;
-    height: 22em;
+    height: 35em;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
